--- a/style.css
+++ b/style.css
@@ -4,5 +4,56 @@ html {
 
 body {
     margin: 0;
-    /* min-height: 100vh; */
+    padding: 0;
+    min-height: 100vh;
+    color: black;
+    background: whitesmoke;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #004e92, #000a61);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #004e92, #000a61); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator {
+    background: white;
+    width: 30%;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px 5px rgba(0, 0, 0, 0.4);
+}
+/* Display */
+.calculator-display {
+    border-radius: 10px 10px 0 0;
+    background: black;
+    color: white;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.calculator-display h1 {
+    padding: 0.5rem;
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: 200;
+    overflow-x: auto;
+}
+
+/* Custom scroll bar */
+::-webkit-scrollbar {
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: whitesmoke;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(128, 128, 128, 0.6);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(128, 128, 128);
 }
