--- a/style.css
+++ b/style.css
@@ -66,7 +66,55 @@ body {
     padding: 10px;
 }
 
+button {
+    min-height: 3rem;
+    font-size: 1rem;
+    font-weight: 300;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background: rgb(114, 114, 114);
+    color: white;
+}
+
+button:hover {
+    filter: brightness(120%);
+}
+
+button:active {
+    transform: translateY(2px);
+}
+
+.operator {
+    background: rgb(51, 48, 48);
+    color: white;
+    font-size: 1.5rem;
+}
+
+button:focus {
+    outline: none;
+}
+
+.operator:active {
+    border: 3px solid white;
+}
+
+.clear {
+    background: rgb(163, 0, 0);
+}
+
 .equal-sign {
     grid-column: -2;
     grid-row: 2 /span 4;
+    background: rgb(12, 163, 93);
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 1000px) {
+    .calculator {
+        width: 95%;
+    }
+    .calculator-display h1 {
+        padding: 2rem;
+    }
 }
